--- a/last-hearth-landing/src/app/rules/rules.component.less
+++ b/last-hearth-landing/src/app/rules/rules.component.less
@@ -4,7 +4,7 @@ p {
 
 .old-paper-background {
     background-color: #e8dfc8;
-    background-image: url("/old-paper.webp"), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 80%);
+    background-image: url('/old-paper.webp'), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 80%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,8 +40,6 @@ p {
 
 .shake-animation {
     animation: gentle-shake 0.5s ease-in-out;
-
-    // Дополнительные стили для лучшего визуального эффекта
     position: relative;
     z-index: 1;
     box-shadow: 0 0 15px rgba(0, 123, 255, 0.3);
