--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -5,27 +5,28 @@
     >
         <tui-icon icon="@tui.chevron-right" class="text-white" />
     </button>
+
     <tui-carousel [(index)]="carouselIndex" [duration]="3500" class="h-auto! !rounded-t-xl">
         @for (item of images; track $index) {
             <div *tuiItem class="size-full relative">
                 <img
                     [src]="item.image"
+                    [alt]="item.header"
                     [class.brightness-75!]="item.isLight"
                     class="h-full w-full md:h-[600px] object-cover object-center"
                 />
                 <div
                     class="absolute flex flex-col justify-start left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white w-[90%] px-4 py-6"
                 >
-                    <!-- Заголовок -->
                     <h2 class="text-4xl lg:text-8xl font-bold mb-4 uppercase !text-shadow-lg">{{ item.header }}</h2>
-
-                    <!-- Текст под заголовком -->
                     <p [innerHTML]="item.body" class="text-2xl lg:text-4xl font-medium !text-shadow-lg"></p>
                 </div>
             </div>
         }
     </tui-carousel>
+
     <tui-pagination size="s" [length]="images.length" [(index)]="carouselIndex" class="mt-2" />
+
     <button
         (click)="navigate(-1)"
         class="absolute nav-button hidden md:block size-12 z-40 left-8 cursor-pointer hover:scale-[105%] transition-all duration-200 top-1/2 -translate-y-1/2 rounded-xl backdrop-blur-md shadow-2xl"
