--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="flex w-full p-6 pb-20 xl:pb-3 justify-between">
     <div class="flex gap-10 items-center">
         <div class="md:flex font-semibold items-center shrink-0 hidden">
-            <img src="/logo.ico" class="size-16" />
+            <img src="/logo.ico" alt="logo" class="size-16" />
         </div>
         <div class="flex flex-col justify-between">
             <div>
@@ -9,21 +9,15 @@
                 <p>Все права сохранены. Копирование материалов без разрешения администрации запрещено.</p>
             </div>
             <div class="flex sm:gap-4 gap-2 flex-col sm:flex-row">
-                <a
-                    [routerLink]="['/privacy-policy']"
-                    class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100 self-start"
-                >
-                    Политика конфиденцильности
-                </a>
+                <a [routerLink]="['/privacy-policy']" class="self-start">Политика конфиденцильности</a>
+
                 <span class="text-lh-primary hidden sm:block">•</span>
-                <a
-                    [routerLink]="['/public-offer']"
-                    class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100 self-start"
-                >
-                    Публичная оферта
-                </a>
+
+                <a [routerLink]="['/public-offer']" class="self-start">Публичная оферта</a>
+
                 <span class="text-lh-primary hidden sm:block">•</span>
-                <a class="text-blue-400 !cursor-default font-bold self-start">Версия 1.1.2 beta от 12.11.2025</a>
+
+                <a class="self-start">Версия 1.1.2 beta от 12.11.2025</a>
             </div>
         </div>
     </div>
@@ -35,7 +29,7 @@
                     class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a class="z-10 nav-button rounded-lg p-2.5" href="https://boosty.to/lisov" target="_blank">
-                        <img src="/images/Boosty.svg" />
+                        <img src="/images/Boosty.svg" alt="Boosty" />
                     </a>
                 </div>
 
@@ -47,7 +41,7 @@
                         href="https://www.donationalerts.com/r/lisovn"
                         target="_blank"
                     >
-                        <img src="/images/DA.svg" />
+                        <img src="/images/DA.svg" alt="DonationAlerts" />
                     </a>
                 </div>
             </div>
@@ -60,7 +54,7 @@
                         href="https://discord.com/invite/FZb7SGrSFy"
                         target="_blank"
                     >
-                        <img src="/images/discord.svg" class="size-6" />
+                        <img src="/images/discord.svg" alt="Discrod" class="size-6" />
                     </a>
                 </div>
                 <div
@@ -71,7 +65,7 @@
                         href="https://www.youtube.com/@LISOVCORP"
                         target="_blank"
                     >
-                        <img src="/images/youtube.svg" class="size-6" />
+                        <img src="/images/youtube.svg" alt="YouTube" class="size-6" />
                     </a>
                 </div>
             </div>
