--- a/last-hearth-landing/src/app/profile/admin/player-verification/create-question-form/create-question-from.component.html
+++ b/last-hearth-landing/src/app/profile/admin/player-verification/create-question-form/create-question-from.component.html
@@ -1,7 +1,7 @@
 <div class="p-6">
     <p class="text-2xl/7.5">Придумайте вопрос на знание правил</p>
     <form [formGroup]="form" (ngSubmit)="onSubmit.next()" class="flex flex-col gap-2 mt-4">
-        <l-input formControlName="question" placeholder="Придумайте вопрос..." class="w-full"> Вопрос </l-input>
+        <lh-input formControlName="question" placeholder="Придумайте вопрос..." class="w-full">Вопрос</lh-input>
         <tui-error formControlName="question" [error]="[] | tuiFieldError | async" />
 
         <button
